Implement boxplot and canvas-based scatter charts
Includes lots of todos referencing unfinished/unpolished parts.

Also refactor the builder classes, reducing a lot of duplication
by properly (-ish) using generic methods.

Includes re-naming of "charts" package into "plots" with two
sub-packages for builders and charts. These names are not set
in stone but it is useful to separate the classes.